<resources>
    <string name="app_name">CinaTIX</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="which_part">Which part of country that you call home?</string>
    <string name="full_name">Full Name</string>
    <string name="your_pass">Your Password</string>
    <string name="lanjut">Lanjut</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_email">Your Email</string>
    <string name="create_pass">Create Your Password</string>
    <string name="new_pass">New Password</string>
    <string name="retype">Re-Type New Password</string>
    <string name="atleast">At Least 9 Characters, Containing A Letter And A Number</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang!</string>
    <string name="metode">Metode Pembayaran</string>
    <string name="ewallet">E-WALLET</string>
    <string name="sebelum">Sebelum bertransaksi, pastikan metode pembayaran yang kamu pilih sudah tersedia di ponselmu ya!</string>
    <string name="dana">DANA</string>
    <string name="cashbackdana">Cashback 50% maks. 25rb</string>
    <string name="gopay">GoPay</string>
    <string name="gopay_reward">Dapatkan reword voucher Rp10.000</string>
    <string name="shopee_pay">ShopeePay</string>
    <string name="shopee_pay_cashback">Cashback s/d 10rb koin Shopee</string>
    <string name="ovo">OVO</string>
    <string name="skip">Skip</string>

    <!-- On Boarding Page One Activity -->
    <string name="welcome_one">Welcome to CinaTIX!</string>
    <string name="subheading_one">Book tickets fast and easy with CinaTix. Get ready for the big screen!</string>

    <!-- On Boarding Page Two Activity -->
    <string name="welcome_two">Personalized Movie</string>
    <string name="subheading_two">Get movie suggestions and release alerts with CinaTix. Never miss a must-watch!</string>

    <!-- On Boarding Page Three Activity -->
    <string name="welcome_three">Book Your Movie in Seconds</string>
    <string name="subheading_three">Pick a film, choose a time, and book instantly with CinaTix.</string>

    <string name="tiket">Tiket</string>
    <string name="movie">Movie</string>
    <string name="judul_movie">Kuasa Gelap</string>
    <string name="show_ticket">Show this ticket at the entrance</string>
    <string name="cinema">Cinema</string>
    <string name="bioskop">DELI PARK XXI</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="movie_date">24 Okt 2024</string>
    <string name="movie_time">16:30</string>
    <string name="section">Section</string>
    <string name="movie_section">4</string>
    <string name="seat">Seat</string>
    <string name="cost_title">Cost</string>
    <string name="order_title">Order ID</string>
    <string name="seat_movie">B5,B6,B7</string>
    <string name="cost">Rp. 30.000</string>
    <string name="order_ticket">10010012420</string>

    <!-- Welcome Activity -->
    <string name="welcome_text">SELAMAT DATANG DI CINATIX</string>
    <string name="descriptive_text">Yey! akunmu sudah aktif. Dapatkan tiket bioskop sekarang, dan eksplor aplikasi CINATIX untuk lebih banyak hiburan!</string>
    <string name="lihat_film">Lihat Film</string>
    <string name="pergi_beranda">Pergi Ke Beranda</string>

    <!-- Item Schedule -->
    <string name="cinema_name">DELI PARK XXI</string>
    <string name="cinema_loaction">5.71 Km | Deli Park Mall Lt.5 Guru Patimpus, Medan</string>
    <string name="ticket_type">2D</string>
    <string name="ticket_price">Rp. 30.000"</string>

    <!-- Movie Sinopsis Activity -->
    <string name="actor_image">Cewe Cantik</string>
    <string name="deskripsi_film">2024 • Horor • 2h 28m</string>
    <string name="identitas_director">Director\nBobby Prasetyo</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="sinopsis">SINOPSIS</string>
    <string name="jadwal">JADWAL</string>
    <string name="sinopsis_text">After the death of his mother and sister in a tragic accident, Thomas (Jerome Kurnia) intends to resign as Father. However, he was given the final task of helping the exorcist Father, Rendra (Lukman Sardi), whose health wa…</string>
    <string name="cast_label">Pemeran</string>
    <string name="beli_tiket">BELI TIKET</string>

    <!-- Profile Activity -->
    <string name="my_profile">My Profile</string>
    <string name="name">Lisa Manoban</string>
    <string name="phone_number">+625805042303</string>
    <string name="wishlist">Wishlist Movie</string>
    <string name="favorite">Favorite Movie</string>
    <string name="logout">Log Out</string>

    <!-- Wishlist Movie Activity -->
    <string name="movie_name">The Wild Robot</string>

    <!-- Ticket Activity -->
    <string name="search">Search</string>
    <string name="tiket_aktif">TIKET AKTIF</string>
    <string name="daftar_transaksi">DAFTAR TRANSAKSI</string>

    <!-- Order Summary Activity -->
    <string name="order_activity">Order Summary</string>
    <string name="movie_title">Kuasa Gelap</string>
    <string name="movie_genre">Drama Comedy</string>
    <string name="movie_location">DELI PARK XXI</string>
    <string name="movie_date_time">Kamis, 24 Okt 2024, 16:30</string>
    <string name="order_id">ORDER ID : 10010012420</string>
    <string name="ticket_count">3  TIKET</string>
    <string name="ticket_seats">B5, B6, B7</string>
    <string name="seat_type">KURSI REGULAR</string>
    <string name="seat_price">Rp. 30.000 x 3</string>
    <string name="service_fee">BIAYA LAYANAN</string>
    <string name="service_fee_price">Rp. 5.000 x 1</string>
    <string name="payment_method_lable">Payment Method</string>
    <string name="complete_payment">Selesaikan pembayaran Anda dalam 07:00</string>
    <string name="notice">*Pembelian ticket tidak bisa dirubah / dibatalkan</string>


    <string name="of_5">%1$s of 5</string>
    <string name="deskripsiFilm">%1$s • %2$s • %3$d min</string>
    <string name="your_name">Your Name</string>
    <string name="welcome_lisa">Welcome Lisa</string>
    <string name="let_s_relax_and_watch_a_movie">Let’s relax and watch a movie.</string>
    <string name="now_playing">Now Playing</string>
    <string name="see_all">See All</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="see_all1">See All</string>
    <string name="pemeran">Pemeran</string>
    <string name="judul_film">Judul Film</string>
    <string name="genre">Genre</string>
    <string name="_4_of_5">4 of 5</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="home_sweet_loan_2024">Home Sweet Loan (2024)</string>
    <string name="drama_comedy">Drama Comedy</string>
    <string name="movie_title1">Movie Title</string>
    <string name="genre1">Genre</string>
</resources>