<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    tools:context=".CreatePassActivity">

    <TextView
        android:id="@+id/createpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/create_pass"
        android:textSize="24sp"
        android:layout_marginTop="110dp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/whichpart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/which_part"
        app:layout_constraintTop_toBottomOf="@id/createpass"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginStart="15dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/newpass"
        app:layout_constraintTop_toBottomOf="@+id/whichpart"
        android:paddingHorizontal="16dp"
        android:hint="@string/new_pass"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="19dp"
        android:fontFamily="sans-serif-medium"
        android:elevation="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="35dp"
        android:background="@drawable/edit_text_background"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/retype"
        app:layout_constraintTop_toBottomOf="@+id/newpass"
        android:paddingHorizontal="16dp"
        android:hint="@string/retype"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="19dp"
        android:fontFamily="sans-serif-medium"
        android:elevation="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="35dp"
        android:background="@drawable/edit_text_background"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atleast"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/retype"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="15dp"
        android:textColor="@color/grey"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/yellow"
        android:height="70dp"
        android:text="@string/lanjut"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="15dp"
        app:cornerRadius="34dp"
        android:layout_marginEnd="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>